--- a/.editorconfig
+++ b/.editorconfig
@@ -166,6 +166,7 @@ dotnet_style_parentheses_in_other_binary_operators = always_for_clarity
 dotnet_style_parentheses_in_other_operators = always_for_clarity
 
 # Analyzers
+
 ## CA1515: Consider making public types internal
 dotnet_diagnostic.CA1515.severity = none
 
@@ -174,6 +175,9 @@ dotnet_diagnostic.CA2007.severity = none
 
 ## CS1591: Missing XML comment for publicly visible type or member
 dotnet_diagnostic.CS1591.severity = none
+
+## CsWinRT1030: Project does not enable unsafe blocks
+dotnet_diagnostic.CsWinRT1030.severity = none
 
 ## IDE0047: Remove unnecessary parentheses
 dotnet_diagnostic.IDE0047.severity = none
@@ -262,7 +266,7 @@ dotnet_diagnostic.rcs0011.severity = suggestion
 dotnet_diagnostic.rcs0012.severity = none
 
 ## Add blank line between single-line declarations of different kind
-dotnet_diagnostic.rcs0013.severity = none
+dotnet_diagnostic.rcs0013.severity = suggestion
 
 ## Add/remove blank line between using directives
 dotnet_diagnostic.rcs0015.severity = suggestion
@@ -292,7 +296,7 @@ dotnet_diagnostic.rcs0027.severity = suggestion
 dotnet_diagnostic.rcs0028.severity = suggestion
 
 ## Put constructor initializer on its own line
-dotnet_diagnostic.rcs0029.severity = none
+dotnet_diagnostic.rcs0029.severity = suggestion
 
 ## Put embedded statement on its own line
 dotnet_diagnostic.rcs0030.severity = suggestion
@@ -331,7 +335,7 @@ dotnet_diagnostic.rcs0045.severity = none
 dotnet_diagnostic.rcs0046.severity = suggestion
 
 ## Put initializer on a single line
-dotnet_diagnostic.rcs0048.severity = none
+dotnet_diagnostic.rcs0048.severity = suggestion
 
 ## Add blank line after top comment
 dotnet_diagnostic.rcs0049.severity = suggestion
@@ -346,7 +350,7 @@ dotnet_diagnostic.rcs0051.severity = suggestion
 dotnet_diagnostic.rcs0052.severity = suggestion
 
 ## Fix formatting of a list
-dotnet_diagnostic.rcs0053.severity = none
+dotnet_diagnostic.rcs0053.severity = suggestion
 
 ## Fix formatting of a call chain
 dotnet_diagnostic.rcs0054.severity = suggestion
@@ -410,7 +414,7 @@ dotnet_diagnostic.rcs1016.severity = none
 dotnet_diagnostic.rcs1018.severity = suggestion
 
 ## Order modifiers
-dotnet_diagnostic.rcs1019.severity = none
+dotnet_diagnostic.rcs1019.severity = suggestion
 
 ## Simplify Nullable<T> to T?
 dotnet_diagnostic.rcs1020.severity = suggestion
@@ -468,7 +472,7 @@ dotnet_diagnostic.rcs1050.severity = suggestion
 dotnet_diagnostic.rcs1051.severity = suggestion
 
 ## Declare each attribute separately
-dotnet_diagnostic.rcs1052.severity = none
+dotnet_diagnostic.rcs1052.severity = suggestion
 
 ## Unnecessary semicolon at the end of declaration
 dotnet_diagnostic.rcs1055.severity = suggestion
@@ -768,7 +772,7 @@ dotnet_diagnostic.rcs1196.severity = suggestion
 dotnet_diagnostic.rcs1197.severity = suggestion
 
 ## Avoid unnecessary boxing of value type
-dotnet_diagnostic.rcs1198.severity = none
+dotnet_diagnostic.rcs1198.severity = suggestion
 
 ## Unnecessary null check
 dotnet_diagnostic.rcs1199.severity = suggestion
@@ -777,7 +781,7 @@ dotnet_diagnostic.rcs1199.severity = suggestion
 dotnet_diagnostic.rcs1200.severity = suggestion
 
 ## Use method chaining
-dotnet_diagnostic.rcs1201.severity = none
+dotnet_diagnostic.rcs1201.severity = suggestion
 
 ## Avoid NullReferenceException
 dotnet_diagnostic.rcs1202.severity = suggestion
@@ -841,7 +845,7 @@ dotnet_diagnostic.rcs1221.severity = suggestion
 dotnet_diagnostic.rcs1222.severity = suggestion
 
 ## Mark publicly visible type with DebuggerDisplay attribute
-dotnet_diagnostic.rcs1223.severity = none
+dotnet_diagnostic.rcs1223.severity = suggestion
 
 ## Make method an extension method
 dotnet_diagnostic.rcs1224.severity = suggestion
@@ -1009,7 +1013,7 @@ dotnet_diagnostic.rcs9011.severity = suggestion
 
 # SonarLinting
 ## S1116: Empty statements should be removed
-dotnet_diagnostic.S1116.severity = none
+dotnet_diagnostic.S1116.severity = suggestion
 
 # Json files
 [*.{json,JSON}]
